<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.zjubme.helloworld.MainActivity$PlaceholderFragment" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/main_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name" 
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/main_et_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_name"
            android:gravity="center" >

            <requestFocus android:layout_width="match_parent" />

        </EditText>
    </LinearLayout>
    
    <LinearLayout
    	android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/main_tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_gender" 
            android:textSize="24sp"/>

   	 	<Spinner
   	 	    android:id="@+id/main_spinner_sex"
   	 	    android:layout_width="118dp"
   	 	    android:layout_height="wrap_content"
   	 	    android:gravity="center" />

	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/main_tv_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_career"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/main_tv_career01"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_choose"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_choose_career"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:onClick="cl_to_choose_career"
            android:text="@string/choose_career" />
    </LinearLayout>    <LinearLayout android:layout_width="match_parent"
    		android:layout_height="wrap_content">
    		<TextView android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/singleornot" android:textSize="24sp" />
    		<ToggleButton android:textOn="@string/single"
    			android:textOff="@string/inlove"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content" />
    		
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/main_tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_email" 
            android:textSize="24sp"/>

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/main_et_email"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email"
            android:gravity="center" >
            <requestFocus android:layout_width="match_parent" />

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/main_tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_phone" 
            android:textSize="24sp"/>

        <EditText
            android:inputType="phone"
            android:id="@+id/main_et_phone"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_phone"
            android:gravity="center" >
            <requestFocus android:layout_width="match_parent" />

        </EditText>
        <Button
        	android:onClick="cl_to_dial"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/dail" />
    </LinearLayout>
</LinearLayout>
